@@ -34,6 +34,7 @@
 +	- Added a selection hover effect to the renderer, making selecting objects a lot more convenient.
 +	- Selecting an invertnext'd object now also selects the invertnext.
 +	- Made the coordinate rounding precision configurable.
++	- Inverting a subfile now detects whether the subfile is flat and flips it if it is instead of naively invertnexting everything.
 
 -	- The camera is now changed to the top one if switching to draw mode while using the free camera instead of disabling the draw mode.
 -	- The color selector now uses the color's edge color for the borders instead of black.
